--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.1",
+    "gulp-imagemin": "^6.1.0",
     "gulp-less": "^4.0.1",
     "gulp-sass": "^4.0.2"
   }
